--- a/src/app/league-zone/league-schedule/matchup-card/matchup-card.component.html
+++ b/src/app/league-zone/league-schedule/matchup-card/matchup-card.component.html
@@ -13,7 +13,7 @@
   <div class="matchup-card__header">
     <div
       class="matchup-card__team-info-container"
-      [routerLink]="'../team/' + matchup.team1.id"
+      [routerLink]="'../teams/' + matchup.team1.id"
     >
       <div
         class="matchup-card__team-logo"
@@ -57,7 +57,7 @@
 
     <div
       class="matchup-card__team-info-container matchup-card__team-info-container--right"
-      [routerLink]="'../team/' + matchup.team2.id"
+      [routerLink]="'../teams/' + matchup.team2.id"
     >
       <div
         class="matchup-card__team-logo"
