--- a/src/app/league-zone/league-team/league-team.component.html
+++ b/src/app/league-zone/league-team/league-team.component.html
@@ -119,6 +119,14 @@
         </div>
       </div>
     </div>
+    <div class="section section--trades">
+      <div class="section-header">
+        <h3>Trades</h3>
+      </div>
+      <div class="section-body">
+        <pdz-league-trade-widget></pdz-league-trade-widget>
+      </div>
+    </div>
   </div>
 } @else {
   <pdz-loading></pdz-loading>
