--- a/src/app/planner/typechart/typechart.component.html
+++ b/src/app/planner/typechart/typechart.component.html
@@ -10,7 +10,7 @@
     <pdz-typechart-core
       [typechart]="typechart"
       [abilities]="abilities"
-      (summarize)="typestats.summarize()"
+      (togglePokemon)="typestats.summarize()"
     ></pdz-typechart-core>
   </div>
   <div class="table-wrapper">
