fix trade reverse causing DOM reloading

--- a/src/app/league-zone/league-trades/trade-card/trade-card.component.html
+++ b/src/app/league-zone/league-trades/trade-card/trade-card.component.html
@@ -1,6 +1,6 @@
 <pdz-comparison-card
-  [entityLeft]="leftEntity()"
-  [entityRight]="rightEntity()"
+  [entityLeft]="leftEntity"
+  [entityRight]="rightEntity"
   [centerText]="
     tradeLog.side2.team && tradeLog.side1.team ? 'Team to Team' : 'Free Agency'
   "
