--- a/src/app/league-zone/league-team/league-team.component.html
+++ b/src/app/league-zone/league-team/league-team.component.html
@@ -18,29 +18,10 @@
   <div class="team-body">
     <div class="section section--matchups">
       <div class="section-header">
-        <h3>Matchups</h3>
+        <h3>Schedule</h3>
       </div>
       <div class="section-body">
-        @if (scheduleStages) {
-          <div class="matchup-stage-list">
-            @for (stage of scheduleStages; track stage._id) {
-              <div class="matchup-stage">
-                <h4 class="matchup-stage__title">{{ stage.name }}</h4>
-                <div class="matchup-stage__cards">
-                  @if (stage.matchups.length === 0) {
-                    <p class="section-message">No matchups in this stage.</p>
-                  } @else {
-                    @for (matchup of stage.matchups; track matchup.id) {
-                      <pdz-matchup-card [matchup]="matchup"></pdz-matchup-card>
-                    }
-                  }
-                </div>
-              </div>
-            }
-          </div>
-        } @else {
-          <p class="section-message">No matchups scheduled.</p>
-        }
+        <pdz-league-schedule-widget></pdz-league-schedule-widget>
       </div>
     </div>
     <div class="section section--draft">
@@ -121,7 +102,7 @@
     </div>
     <div class="section section--trades">
       <div class="section-header">
-        <h3>Trades</h3>
+        <h3>Active Trades</h3>
       </div>
       <div class="section-body">
         <pdz-league-trade-widget></pdz-league-trade-widget>
