Add schedule manage

--- a/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.html
+++ b/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.html
@@ -43,7 +43,7 @@
       <h3>Matchups</h3>
     </div>
     <div class="section-body">
-      <pdz-league-schedule-widget stages="current"></pdz-league-schedule-widget>
+      <pdz-league-schedule-widget stage="current"></pdz-league-schedule-widget>
     </div>
   </div>
   <div class="section section--trades">
