--- a/src/app/league-zone/league-team/league-team.component.scss
+++ b/src/app/league-zone/league-team/league-team.component.scss
@@ -12,11 +12,18 @@
 
   &__meta {
     display: flex;
-    align-items: center;
-    gap: var(--pdz-space-md);
+    flex-direction: column;
+    align-items: flex-start;
+    gap: var(--pdz-space-xs);
     flex: 1 1 auto;
     min-width: 0;
     height: 100%;
+
+    @include respond-above(medium) {
+      flex-direction: row;
+      align-items: center;
+      gap: var(--pdz-space-md);
+    }
   }
 
   &__info {
