--- a/src/app/league-zone/league-widgets/league-trade-widget/league-trade-widget.component.scss
+++ b/src/app/league-zone/league-widgets/league-trade-widget/league-trade-widget.component.scss
@@ -2,16 +2,22 @@
 @use "../../../../styles/mixins" as *;
 
 .stage {
-  .stage-header {
+  &-header {
     @include apply-typography(title-sm);
   }
 
-  .stage-body {
+  &-body {
     border-left: 2px solid var(--pdz-color-primary);
     padding: var(--pdz-space-md) 0 var(--pdz-space-md) var(--pdz-space-md);
     display: flex;
     flex-direction: column;
     width: fit-content;
     gap: var(--pdz-space-sm);
+  }
+
+  &__empty {
+    color: var(--pdz-color-on-surface);
+    font-style: italic;
+    padding: 0 var(pdz-space-md);
   }
 }
